--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
     "lib": [
       "dom",
       "dom.iterable",
@@ -18,9 +18,19 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "./src",
+    "paths": {
+      "@src/*": ["./*"],
+      "@svg/*": ["./svg/*"],
+      "@ui/*": ["./ui/*"],
+      "@vlc/*": ["./vlc/*"],
+    }
   },
   "include": [
-    "src"
+    "./src"
+  ],
+  "exclude": [
+    "./node_modules"
   ]
 }
