🚧 Working on Controls

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
       "@svg/*": ["./svg/*"],
       "@ui/*": ["./ui/*"],
       "@vlc/*": ["./vlc/*"],
+      "@utils/*": ["./utils/*"],
     }
   },
   "include": [
