--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "scripts": {
     "start": "BROWSER=none craco start",
+    "proxy": "lcp --proxyUrl http://192.168.1.44:8080",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "local-cors-proxy": "^1.1.0",
     "sass": "^1.54.3",
     "ts-standard": "^11.0.0"
   }
