--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
@@ -45,7 +45,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react-helmet": "^6.1.6",
     "local-cors-proxy": "^1.1.0",
     "sass": "^1.54.3",
     "ts-standard": "^11.0.0"
