--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "start": "BROWSER=none craco start",
-    "proxy": "lcp --proxyUrl http://vlc.aumon",
+    "proxy": "lcp --proxyUrl http://caixo.aumon:8080",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
