--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
   "scripts": {
     "start": "BROWSER=none craco start",
     "proxy": "lcp --proxyUrl http://caixo.aumon:8080",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "craco build",
+    "test": "craco test"
   },
   "eslintConfig": {
     "extends": [
